[gd_scene load_steps=8 format=3 uid="uid://dvquo8dq47kay"]

[ext_resource type="Script" uid="uid://vx64j622sod" path="res://characters/killer.gd" id="1_h1eha"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eg0eo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h1eha"]
albedo_color = Color(0.729412, 0.109804, 0.054902, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0uksx"]
material = SubResource("StandardMaterial3D_h1eha")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eg0eo"]
albedo_color = Color(1, 0.305882, 0.317647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_00wek"]
material = SubResource("StandardMaterial3D_eg0eo")
size = Vector3(0.5, 0.2, 0.5)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_eg0eo"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Killer" type="CharacterBody3D"]
script = ExtResource("1_h1eha")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_eg0eo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_0uksx")
skeleton = NodePath("../CollisionShape3D")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.607524, -0.032855)
cull_mask = 1048573

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.295818)
mesh = SubResource("BoxMesh_00wek")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_eg0eo")

[node name="VisibleDetector" type="VisibleOnScreenNotifier3D" parent="."]
layers = 2
aabb = AABB(-0.477909, -1.00587, -0.453724, 0.955818, 2.01174, 0.907448)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_energy = 5.0
omni_range = 20.0

[connection signal="screen_entered" from="VisibleDetector" to="." method="_on_visible_detector_screen_entered"]
[connection signal="screen_exited" from="VisibleDetector" to="." method="_on_visible_detector_screen_exited"]
